# BokslDir

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md
.claude/: CLAUDE.md  refactoring_guide.md  settings.json
.codex/skills/bk-all/: SKILL.md
.codex/skills/bk-build-fix/: SKILL.md
.codex/skills/bk-clippy-fix/: SKILL.md
.codex/skills/bk-commit-executor/: SKILL.md
.codex/skills/bk-commit-message/: SKILL.md
.codex/skills/bk-general-code-review/: SKILL.md
.codex/skills/bk-quality-check/: SKILL.md
.codex/skills/bk-release-notes-updater/: SKILL.md
.codex/skills/commit-executor/: SKILL.md
.codex/skills/commit-message/: SKILL.md
.github/workflows/: security-audit.yml
docs/: Architecture.md  OS-Setup-Guide.md  PRD.md  Requirements.md  UI_UX_Improvements.md  User-Manual.md
src/: app.rs  main.rs
src/app/: dialogs.rs  navigation.rs  operations.rs  tests.rs  text_edit.rs
src/app/controllers/: dialog_controller.rs  mod.rs  operation_controller.rs
src/core/: actions.rs  file_manager.rs  mod.rs  navigator.rs
src/models/: file_entry.rs  mod.rs  operation.rs  panel_state.rs  tab_manager.rs  tab_state.rs
src/system/: archive.rs  config.rs  filesystem.rs  ime.rs  mod.rs
src/ui/: i18n.rs  layout.rs  mod.rs  renderer.rs  theme.rs
src/ui/components/: command_bar.rs  dialog.rs  dropdown_menu.rs  menu_bar.rs  mod.rs  panel.rs  status_bar.rs  warning.rs
src/ui/components/dialog/: builders.rs  kind.rs  render.rs
src/utils/: error.rs  formatter.rs  glob.rs  mod.rs  path_display.rs
themes/: dark.toml  high_contrast.toml  light.toml
