[package]
name = "boksldir"
version = "0.1.0"
edition = "2021"
authors = ["BokslDir Team"]
description = "A dual-panel file manager for the terminal"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Date/Time
chrono = "0.4"

# System Directories
dirs = "6.0"
