[package]
name = "boksldir"
version = "0.1.0"
edition = "2021"
authors = ["BokslDir Team"]
description = "A dual-panel file manager for the terminal"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Date/Time
chrono = "0.4"

# System Directories
dirs = "6.0"

# Shell-like argument parsing
shlex = "1.3"

# Unicode Width Calculation
unicode-width = "0.1"

# Trash (Recycle Bin)
trash = "5"

# Archive (Phase 8)
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
sevenz-rust2 = { version = "0.13", features = ["aes256"] }

[dev-dependencies]
tempfile = "3.15"
